# plotica

./: .gitignore  .ignore  .readthedocs.yaml  Cargo.toml  Makefile  README.md  index.html  index.js  mkdocs.yml  package-lock.json  package.json  rollup.config.js
.ctags.d/: default.ctags
ci-requirements/: pyproject.toml  requirements.in  requirements.out  requirements.txt
docs/: CHANGELOG.md  README.md  import-es.js  import-iife.html  overview.json  own_hooks.py  readme.js  sponsor-project.md  support-project.md
docs/main/: coming-soon.md  example-legend.js  example-log.js  example-no-log.js  more-examples.md  reference-api.js  reference-data.js  reference.md
docs/main/themes/: default.js
pkg/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
src/: animate.rs  camera.rs  controls.rs  data_set.rs  debug.rs  events.rs  grid.rs  legend.rs  lib.rs  main_chart.rs  manager.rs  params.rs  pos.rs  preview.rs  scale.rs  screen.rs  tooltip.rs  utils.rs  versioned.rs
