[package]
name = "graphima"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[dependencies]
wasm-bindgen = "*"
js-sys = "*"
thiserror = "1"
chrono = "0.4.24"

[dependencies.web-sys]
version = "*"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'ImageData',
  'Navigator',
  'Node',
  'Performance',
  'Window',
]
