[package]
name = "plotica"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/westandskif/plotica"
description = "wasm-based chart drawing library"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
strip = true

[dependencies]
wasm-bindgen = "*"
js-sys = "*"
thiserror = "*"
chrono = "*"
wee_alloc = "*"


[dependencies.web-sys]
version = "*"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'ImageData',
  'Navigator',
  'Node',
  'Performance',
  'Window',
]
